--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <section class="firstsection">
-            <div class="lefts">Hi, Iam <span class="color">abcdefghi</span>
+            <div class="lefts">Hi, Iam <span class="color">Chinmaya</span>
                 <div>and Iam an <div>
                         <span id="element"></span>
                     </div>
